--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: ViaLegacyAPI
 main: dev.diona.vialegacyapi.ViaLegacyAPI
 authors: [ _MylesC, Loyisa ]
-version: 1.0.0
+version: ${version}
 api-version: 1.13
 depend: [ ViaVersion ]
